--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 install: 
     - nuget install libgit2sharp -OutputDirectory .\packages -ExcludeVersion
 
+version: 1.0.0.{build}
+
 build: false
 
 build_script:
