Full implementation of all the tests... Changed some tests to make the last step work Made uploading test results dependent on ENV variable

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # ignore packages (this is for nuget stuff)
 /packages/*
-
+# ignore output (because we put stuff there)
+/output/*
 # Ignore version number folders (these are our intermediate "output" directories for testing)
 /[0-9]*/
