--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ test_script:
 on_finish:
   - ps: .\Package.ps1 -Verbose | % { Push-AppveyorArtifact $_.FullName }
 notifications:
-  - profider: Slack
+  - provider: Slack
     auth_token:
       secure: 1S3E8mVpvHEpdXsgHot0Qc0yUnU8ka/yd6Kex7r7yIZmSPwkMDIJEvdf/WMMTb/g
     channel: poshcode
