--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,4 +17,7 @@ notifications:
     auth_token:
       secure: 1S3E8mVpvHEpdXsgHot0Qc0yUnU8ka/yd6Kex7r7yIZmSPwkMDIJEvdf/WMMTb/g
     channel: poshcode
-    template: "<{{buildUrl}}|Build {{projectName}} {{buildVersion}} {{status}}> Commit <{{commitUrl}}|{{commitId}}> by {{commitAuthor}} on {{commitDate}}: _{{commitMessage}}_"
+    template: <{{buildUrl}}|Build {{projectName}} {{buildVersion}} {{status}}>
+      Commit <{{commitUrl}}|{{commitId}}> by {{commitAuthor}} on {{commitDate}}: 
+      _{{commitMessage}}_
+      {{mesages}}
