Created a new VS PowerShellScriptModule project and manually added all PS-Git files. Adapted .gitignore to ignore the bin and obj folders, as well as the .suo

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /output/*
 # Ignore version number folders (these are our intermediate "output" directories for testing)
 /[0-9]*/
+# ignore PSTools for VisualStudio files and folders
+/bin/*
+/obj/*
+*.suo
