Try a fix for module dependency in build...

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ build: false
 install: 
   - git submodule update --init 
   - nuget install libgit2sharp -OutputDirectory .\packages -ExcludeVersion
+  - Install-Module Configuration
 build_script:
   - ps: .\Build.ps1 -Verbose 
 test_script:
