Attempt to fix the AppVeyor build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,11 +3,12 @@ environment:
   CODECOV_TOKEN:
     secure: rsFxWQLZS6IIliwfOn/YG3hnT/cgWPycvTqP2Ao6zkSlo0RGmCrlOv5H/O1Y0l8
 build: false
-install: 
-  - git submodule update --init 
+install:
+  - git submodule update --init
   - nuget install libgit2sharp -OutputDirectory .\packages -ExcludeVersion
+  - ps: Install-Module Configuration -Minimum 1.0
 build_script:
-  - ps: .\Build.ps1 -Verbose 
+  - ps: .\Build.ps1 -Verbose
 test_script:
   - ps: .\Test.ps1 # -Quiet
 on_finish:
