--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+Tests/.Do.Not.COMMIT.This.Steps.ps1
 # ignore packages (this is for nuget stuff)
 /packages/*
 # ignore output (because we put stuff there)
